src/Pages/HomePage/HomePage.css
blockquote {
  margin: 0 1rem 0 1rem;
}
.HomePage-header {
  min-height: 70vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-image: url('https://imgur.com/dVFsaKI.png');
  background-size: auto;
  background-repeat: no-repeat;
  background-position: 100% 50%;
}

.HomePage-navbar {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  width: 100%;
  height: 10vh;
}

.HomePage-navbar,
.HomePage-project-card,
.HomePage-section-heading {
  padding: 0 0 4rem 0;
}
.HomePage-section-heading {
  display: flex;
  flex-direction: column;

  width: 75%;
}

.HomePage-header,
.HomePage-projects-list {
  padding: 0 4rem;
}

.HomePage-projects-list {
  padding-top: 4rem;
  background-color: #282c34;
  color: white;
  height: 100%;
}

.HomePage-nav {
  display: flex;
  flex-direction: row;
  list-style: none;
  padding: 0;
}

.HomePage-nav > li {
  margin-right: 1rem;
}

.HomePage-link {
  color: inherit;
  padding-bottom: 0.25rem;
}

.HomePage-link:hover {
  color: #9b51e0;
  text-decoration: none;
  border-bottom: 2px solid #9b51e0;
  transition: color 0.5s;
}

.HomePage-project-card {
  display: flex;
  flex-direction: row;
  width: 100%;
}
.HomePage-project-card:nth-child(even) {
  flex-direction: row-reverse;
}

.HomePage-project-card--text {
  width: 40%;
}
.HomePage-project-card--item {
  width: 60%;

  margin: 0;
}

.HomePage-project-card--text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 4rem;
}
.HomePage-project-card:nth-child(even) .HomePage-project-card--text {
  margin: 0 0 0 4rem;
}
.HomePage-project-card--image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.HomePage-header--content {
  width: 100%;
  height: 80vh;
  display: flex;
}

.HomePage-header--text {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.HomePage-header-arrow {
  display: flex;
  justify-content: center;
  align-items: center;

  padding-bottom: 4rem;
}
li > a.HomePage-link {
  text-decoration: none;
}
/*====================================
/* * # MEDIA QUERIES
====================================*/

@media screen and (max-width: 1160px) {
  .HomePage-project-card,
  .HomePage-project-card:nth-child(even) {
    display: flex;
    flex-direction: column;
    padding-bottom: 4rem;
  }

  .HomePage-project-card--text,
  .HomePage-project-card--item,
  .HomePage-project-card:nth-child(even) .HomePage-project-card--text {
    width: 100%;
    margin: 0;
  }
}
@media screen and (max-width: 960px) {
  .HomePage-header--text > h1 {
    font-size: 2rem;
  }
}

@media screen and (max-width: 768px) {
  .HomePage-header {
    background-image: none;
  }
  .HomePage-header--text {
    width: 100%;
  }
  .HomePage-section-heading {
    width: 100%;
  }
}

@media screen and (max-width: 579px) {
  .HomePage-header {
    padding: 0 2rem;
  }

  .HomePage-projects-list {
    padding: 2rem 2rem 0;
  }
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

